2004-11-29  Richard Henderson  <rth@redhat.com>

	* tree-cfg.c (tree_node_can_be_shared): Fix typo'd error_mark_node.

2004-11-29  Steven Bosscher  <stevenb@suse.de>

	* cfgcleanup.c (outgoing_edges_match, try_crossjump_to_edge):
	Remove CASE_DROPS_THROUGH checks, it is never defined.
	* cfglyout.c (fixup_reorder_chain): Likewise.
	* cfgrtl.c (rtl_verify_flow_info): Likewise.
	* stmt.c (expand_case): Likewise.
	* cfgbuild.c (make_edges): Likewise.  Also remove force_fallthru,
	it is now always 0.
	* system.h (CASE_DROPS_THROUGH): Poison.
	* doc/md.texi (casesi): Remove documentation of CASE_DROPS_THROUGH.
	* doc/tm.texi (casesi): Remove documentation of CASE_DROPS_THROUGH.

	* config/v850/v850.h: Remove commented out CASE_DROPS_THROUGH.

2004-11-29  Andrew Pinski  <pinskia@physics.uc.edu>

	PR middle-end/18725
	* tree-cfg.c (tree_node_can_be_shared): Error_mark_node can be
	shared always.

2004-11-29  Diego Novillo  <dnovillo@redhat.com>

	PR tree-optimization/18712
	* tree-into-ssa.c (insert_phi_nodes_for): Pass argument
	WORK_STACK by reference.
	Call VEC_safe_push instead of VEC_quick_push.
	Update all users.

2004-11-29  Daniel Jacobowitz  <dan@codesourcery.com>

	PR c/7544
	* Makefile.in (c-lang.o): Update dependencies.
	* c-lang.c: Include "c-pragma.h".
	(finish_file): Call maybe_apply_pending_pragma_weaks.
	* c-pragma.c (maybe_apply_pending_pragma_weaks): New function.
	* c-pragma.h (maybe_apply_pending_pragma_weaks): New prototype.

2004-11-29  Richard Henderson  <rth@redhat.com>

	PR target/17224
	* config/ia64/predicates.md (sdata_symbolic_operand): Deny offsets
	outside the referenced object.

2004-11-29  Kazu Hirata  <kazu@cs.umass.edu>

	* tree-if-conv.c (replace_phi_with_cond_modify_expr): Use
	EDGE_PRED instead of PHI_ARG_EDGE.
	* tree-ssa-live.c: Likewise.
	* tree-ssa-loop-manip.c: Likewise.
	* tree-ssa.c: Likewise.

	* cfgrtl.c (cfg_layout_redirect_edge_and_branch): Speed up by
	simplifying edge manipulation.
